--- a/templates/LDCCompany/Template_paid.html
+++ b/templates/LDCCompany/Template_paid.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Квитанции</title>
-    <style>
+    <meta charset="UTF-8">
+    <title>Информация об оплате квитанции</title>
+        <style>
         .myfield{
             border:1px solid #ccc;
             border-radius:5px;
@@ -41,78 +41,67 @@
             }
     </style>
 </head>
-<body class="container">
-    <div id="header" >
+<body>
+<div id="header" >
         <h3 align="right"><a href="/admin/logout/">выйти из аккаунта</a></h3>
-        <h1 align="center">Квитанции<h1>
+        <h1 align="center">Информация об оплате квитанции</h1>
         <h3 align="center"><a href = "{% url 'home' %}">назад</a></h3>
-    </div>
+</div>
 
 <table border="1" width="70%" align="center">
     <tr>
         <th align="center" width="50%">
-    <form method="POST" action="addr/">
+    <form method="POST" action="addpr/">
         {% csrf_token %}
         <table>
             {{ form }}
         </table>
-        <input class="button" type="submit" value="Добавить квитанцию">
+        <input class = "button" type="submit" value="Добавить информацию об оплате квитанции">
     </form>
     <br>
     <br>
-    <form method="POST" action="delr/">
+    <form method="POST" action="delpr/">
         {% csrf_token %}
-        <label>Введите id: </label>
-        <input class = 'myfield' type= "number" name="delname" ><br>
-        <input class="button" type= "submit" value="Удалить квитанцию">
+        <label>Введите id</label>
+        <input class = "myfield" type= "number" name="delname"><br>
+        <input class = "button" type= "submit" value="Удалить информацию об оплате квитанции">
     </form>
     <br>
     <br>
-    <form method="POST" action="upr/">
+    <form method="POST" action="uppr/">
         {% csrf_token %}
-        <label>Введите id: </label>
-        <input class = 'myfield' type= "number" name="upname"><br>
+        <label>Введите id</label>
+        <input class="myfield" type= "number" name="upname"><br>
         <table>
             {{ form }}
         </table>
-        <input class="button" type= "submit" value="Изменить квитанцию">
+        <input class = "button" type= "submit" value="Изменить информацию об оплате квитанции">
     </form>
-    </table>
-    <th align="center" width="50%">
-        <h1 align="center"> Список квитанций</h1>
-    <table border="1" width="70%" align="center">
-    <tr>
+</table>
 
+    <tr>
+        <th align="center" width="50%">
+        <h1 align="center"> Список информации об оплате квитанции</h1>
+     <table border="1" width="70%" align="center">
     <form method="POST" action="show/">
         {% csrf_token %}
         <table id='b' border=1 width="70%" align="center">
             <tr align="center" bgcolor="#8019a6">
                 <th>Id</th>
-                <th>Имя</th>
-                <th>Фамилия</th>
-                <th>Адресс</th>
-                <th>Номер тарифа</th>
-                <th>Номер разговора</th>
-                <th>Номер клиента</th>
+                <th>Номер информации об оплате</th>
+                <th>Оплата</th>
             </tr>
         {% for i in data_show %}
             <tr align="center">
                 <td>{{ i.id }}</td>
-                <td>{{ i.date }}</td>
-                <td>{{ i.cost }}</td>
-                <td>{{ i.payment_term }}</td>
-                <td> <a href="{% url 'tariff' %}"> {{ i.id_tariff }}</td>
-                <td> <a href="{% url 'conversation' %}"> {{ i.id_tconversation }}</td>
-                <td> <a href="{% url 'client' %}"> {{ i.id_client }}</td>
-
+                <td>{{ i.id_receipt }}</td>
+                <td>{{ i.payment }}</td>
             </tr>
         {% endfor %}
         </table>
     </form>
-        </th>
+</th>
     </tr>
 </table>
-
 </body>
 </html>
-
